smaller pictures in 'tableware' and 'paintings'

--- a/other.html
+++ b/other.html
@@ -120,32 +120,50 @@
 
             <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/sundbyberg.jpg"
                     alt="abstract, ceramic prize made for sundbybergs commune">
-
+                <figcaption>
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </figcaption>
             </figure>
 
             <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/sundbyberg-2.jpg"
                     alt="abstract, ceramic prize made for sundbybergs commune">
-
+                <figcaption>
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </figcaption>
             </figure>
 
             <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/mushroom-hook-1.jpg"
                     alt="a blue coat hanger in shapes of mushrooms">
-
+                <figcaption>
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </figcaption>
             </figure>
 
             <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/mushroom-hook-2.jpg"
                     alt="close-up of a blue coat hanger in shapes of mushrooms">
-
+                <figcaption>
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </figcaption>
             </figure>
 
             <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/mushroom-hook-3.jpg"
                     alt="a red coat hanger in shapes of mushrooms">
-
+                <figcaption>
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </figcaption>
             </figure>
 
             <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/mushroom-hook-4.jpg"
                     alt="close-up of a red coat hanger in shapes of mushrooms">
-
+                <figcaption>
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </figcaption>
             </figure>
 
             <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/pot-1.jpg"
