--- a/paintings.html
+++ b/paintings.html
@@ -28,7 +28,7 @@
             </div>
         </nav>
         <main class="painting-gallery">
-            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/landscape-1.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/landscape-1.jpeg"
                     alt="big painting of colorful landscape">
                 <figcaption>
                     <h2>Björn Wessman inspired Landscape</h2>
@@ -38,7 +38,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/landscape-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/landscape-2.jpeg"
                     alt="big painting of colorful landscape from distance">
                 <figcaption>
                     <h2>Björn Wessman inspired Landscape</h2>
@@ -48,7 +48,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/forest-landscape.JPG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/forest-landscape.jpeg"
                     alt="painting of a forest landscape">
                 <figcaption>
                     <h2>Landscape</h2>
@@ -57,7 +57,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/mirror-landscape-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/mirror-landscape-2.jpeg"
                     alt="a mirror landscape of the black beach in Iceland">
                 <figcaption>
                     <h2>Reflective landscape</h2>
@@ -66,7 +66,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/selfportrait-1.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/selfportrait.jpeg"
                     alt="colorful selfportrait">
                 <figcaption>
                     <h2>Selfportrait</h2>
@@ -75,7 +75,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/selfportrait-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/selfportrait-mini.jpeg"
                     alt="a close-up of a selfportrait">
                 <figcaption>
                     <h2>Selfportrait</h2>
@@ -84,7 +84,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/garden.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/garden.jpeg"
                     alt="painting of a a colorful garden">
                 <figcaption>
                     <h2>Ogród (garden)</h2>
@@ -94,7 +94,7 @@
             </figure>
 
             <figure class="hover-img" tabindex="0" id="carousel-link-4"><img class="item"
-                    src="./paintings-gallery/mirror-landscape-1.jpg" alt="a mirror landscape with a river">
+                    src="./paintings-gallery/mirror-landscape-1.jpeg" alt="a mirror landscape with a river">
                 <figcaption>
                     <h2>Reflective landscape</h2>
                     <p> Landscape painted on a blank surface to scratch within the paint
@@ -102,7 +102,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/mushrooms-sketch.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/mushrooms-sketch.jpeg"
                     alt="sketch of mushrooms">
                 <figcaption>
                     <h2>Latest sketches</h2>
@@ -111,7 +111,7 @@
 
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/painting.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/painting.jpeg"
                     alt="an abstract painting">
                 <figcaption>
                     <h2>Latest sketches</h2>
@@ -119,7 +119,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/another.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/another.jpeg"
                     alt="painting of a landscape">
                 <figcaption>
                     <h2>Latest sketches</h2>
