smaller images for 'sculptures' and 'other'

--- a/other.html
+++ b/other.html
@@ -28,7 +28,7 @@
             </div>
         </nav>
         <div class="other-gallery">
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/face-hangers.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/face-hangers (1).jpeg"
                     alt="multiple coat hangers in shapes of faces merged with elephant noses in different colours">
                 <figcaption>
                     <h2>Surrealistic hooks</h2>
@@ -37,7 +37,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/face-hangers-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/face-hangers-2 (1).jpeg"
                     alt="multiple coat hangers in shapes of faces merged with elephant noses in different colours">
                 <figcaption>
                     <h2>Surrealistic hooks</h2>
@@ -46,7 +46,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/face-hanger-green.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/face-hanger-green-min.jpeg"
                     alt="green coat hanger in a shape of face merged with elephant nose">
                 <figcaption>
                     <h2>Surrealistic hooks</h2>
@@ -55,7 +55,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/face-hanger-green 2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/face-hanger-green 2 (1).jpeg"
                     alt="green elephant coat hanger from a different angle">
                 <figcaption>
                     <h2>Surrealistic hooks</h2>
@@ -64,7 +64,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/bombki.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/bombki-min.jpeg"
                     alt="pink glass christmas baubles">
                 <figcaption>
                     <h2>Christmas Baubles</h2>
@@ -73,7 +73,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/bag-print.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/bag-print-min.jpeg"
                     alt="tote bag print">
                 <figcaption>
                     <h2>Screen print on textile.</h2>
@@ -82,7 +82,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/bag-print-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/bag-print-2-min.jpeg"
                     alt="tote bag print">
                 <figcaption>
                     <h2>Screen print on textile.</h2>
@@ -91,7 +91,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/bag-print-3.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/bag-print-3-min.jpeg"
                     alt="tote bag print">
                 <figcaption>
                     <h2>Screen print on textile.</h2>
@@ -100,7 +100,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/painted-stool.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/painted-stool-min.jpeg"
                     alt="white stool with underwater scene painted on top of it">
                 <figcaption>
                     <h2>Flower table</h2>
@@ -109,7 +109,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/painted-stool-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/painted-stool-2-min.jpeg"
                     alt="white stool with underwater scene painted on top of it from another angle">
                 <figcaption>
                     <h2>Flower table</h2>
@@ -118,7 +118,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/sundbyberg.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/sundbyberg-min.jpeg"
                     alt="abstract, ceramic prize made for sundbybergs commune">
                 <figcaption>
                     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -126,7 +126,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/sundbyberg-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/sundbyberg-2-min.jpeg"
                     alt="abstract, ceramic prize made for sundbybergs commune">
                 <figcaption>
                     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -134,7 +134,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/mushroom-hook-1.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/mushroom-hook-1-min.jpeg"
                     alt="a blue coat hanger in shapes of mushrooms">
                 <figcaption>
                     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -142,7 +142,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/mushroom-hook-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/mushroom-hook-2-min.jpeg"
                     alt="close-up of a blue coat hanger in shapes of mushrooms">
                 <figcaption>
                     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -150,7 +150,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/mushroom-hook-3.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/mushroom-hook-3-min.jpeg"
                     alt="a red coat hanger in shapes of mushrooms">
                 <figcaption>
                     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -158,7 +158,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/mushroom-hook-4.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/mushroom-hook-4 (1).jpeg"
                     alt="close-up of a red coat hanger in shapes of mushrooms">
                 <figcaption>
                     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -166,7 +166,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/pot-1.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/pot-1-min.jpeg"
                     alt="white, ceramic, plant pot from a side">
                 <figcaption>
                     <h2>White pot</h2>
@@ -175,7 +175,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/pot-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/pot-2-min.jpeg"
                     alt="a close-up of a white, ceramic, plant pot">
                 <figcaption>
                     <h2>White pot</h2>
@@ -184,7 +184,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/pot-3.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/pot-3-min.jpeg"
                     alt="white, ceramic, plant pot from above">
                 <figcaption>
                     <h2>White pot</h2>
@@ -192,7 +192,7 @@
                         <br> Material: ceramics and glaze</p>
                 </figcaption>
             </figure>
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/pot-4.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/pot-4-min.jpeg"
                     alt="white, ceramic, plant pot on a table with a plant in it">
                 <figcaption>
                     <h2>White pot</h2>
@@ -201,7 +201,7 @@
                 </figcaption>
             </figure>
             <figure class="hover-img" tabindex="0" id="carousel-link-3"><img class="item"
-                    src="./others gallery/stool-1.JPEG" alt="red wooden stool, with spikes underneath">
+                    src="./others gallery/stool-1 (1).jpeg" alt="red wooden stool, with spikes underneath">
                 <figcaption>
                     <h2>Chaos</h2>
                     <p>A stool inspired by chaos and the feelings of stress.
@@ -209,7 +209,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/stool-2.JPEG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/stool-2 (1).jpeg"
                     alt="red wooden stool, with spikes underneath">
                 <figcaption>
                     <h2>Chaos</h2>
@@ -218,7 +218,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/stool-3.JPEG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/stool-3 (1).jpeg"
                     alt="red wooden stool, with spikes underneath, from underneath">
                 <figcaption>
                     <h2>Chaos</h2>
