--- a/projects.html
+++ b/projects.html
@@ -30,8 +30,8 @@
     <section id="projects">
       <h1>PROJECTS</h1>
       <div class="all-img">
-        <a href="./sculptures.html"><img src="./sculptures gallery/head-1.jpg" alt="picture of a ceramic head sculpture"
-            class="sculptures" />
+        <a href="./sculptures.html"><img src="./sculptures gallery/head-1-min.jpeg"
+            alt="picture of a ceramic head sculpture" class="sculptures" />
           <p>click to see more sculptures</p>
         </a>
 
