--- a/sculptures.html
+++ b/sculptures.html
@@ -28,7 +28,7 @@
             </div>
         </nav>
         <div class="sculpture-gallery">
-            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/big-mushroom-1.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/big-mushroom-1-min.jpeg"
                     alt="A ceramic candle holder in a shape of a huge, human sized red mushroom">
                 <figcaption>
                     <h2>Mushroom dinnerware</h2>
@@ -41,7 +41,7 @@
                         <br> Material: Clay and glaze</p>
                 </figcaption>
             </figure>
-            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/big-mushroom-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/big-mushroom-2-min.jpeg"
                     alt="a close-up of a ceramic candle holder in a shape of a huge, human sized red mushroom">
                 <figcaption>
                     <h2>Mushroom dinnerware</h2>
@@ -54,7 +54,7 @@
                         <br> Material: Clay and glaze</p>
                 </figcaption>
             </figure>
-            <figure class="hover-img" tabindex="0"><img class="item" src="./sculptures gallery/head-1.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./sculptures gallery/head-1-min.jpeg"
                     alt="a head sculptue from a side">
                 <figcaption>
                     <h2>A portrait of my classmate</h2>
@@ -62,7 +62,7 @@
                     <p> Material: Clay</p>
                 </figcaption>
             </figure>
-            <figure class="hover-img" tabindex="0"><img class="item" src="./sculptures gallery/head-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./sculptures gallery/head-2-min.jpeg"
                     alt="a head sculpture from up front">
                 <figcaption>
                     <h2>A portrait of my classmate</h2>
@@ -71,14 +71,15 @@
                 </figcaption>
             </figure>
             <figure class="hover-img" tabindex="0" id="carousel-link-5"><img class="item"
-                    src="./sculptures gallery/organic-lamp-1.JPG" alt="an organic lamp made from dried orange slices">
+                    src="./sculptures gallery/organic-lamp-1-min.jpeg"
+                    alt="an organic lamp made from dried orange slices">
                 <figcaption>
                     <h2>Organic lamp</h2>
                     <p>A esthetic lamp with focus on shadows</p>
                     <p>Material: Oranges and wire</p>
                 </figcaption>
             </figure>
-            <figure class="hover-img" tabindex="0"><img class="item" src="./sculptures gallery/organic-lamp-2.JPG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./sculptures gallery/organic-lamp-2-min.jpeg"
                     alt="close-up of an organic lamp made from dried orange slices">
                 <figcaption>
                     <h2>Organic lamp</h2>
@@ -86,7 +87,7 @@
                     <p>Material: Oranges and wire</p>
                 </figcaption>
             </figure>
-            <figure class="hover-img" tabindex="0"><img class="item" src="./sculptures gallery/candle-holder-4.JPEG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./sculptures gallery/candle-holder-4 (1).jpeg"
                     alt="abstract candle holders with open mouths, hands and fingers on it">
                 <figcaption>
                     <h2>Kroppsljusstakar<br>(body candlesticks)</h2>
@@ -94,7 +95,7 @@
                     <p>Material: Plaster</p>
                 </figcaption>
             </figure>
-            <figure class="hover-img" tabindex="0"><img class="item" src="./sculptures gallery/candle-holder-1.JPEG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./sculptures gallery/candle-holder-1 (1).jpeg"
                     alt="abstract candle holders with open mouths, hands and fingers on it">
                 <figcaption>
                     <h2>Kroppsljusstakar<br>(body candlesticks)</h2>
@@ -102,7 +103,7 @@
                     <p>Material: Plaster</p>
                 </figcaption>
             </figure>
-            <figure class="hover-img" tabindex="0"><img class="item" src="./sculptures gallery/candle-holder-3.JPG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./sculptures gallery/candle-holder-3-min.jpeg"
                     alt="abstract candle holders with open mouths, hands and fingers on it">
                 <figcaption>
                     <h2>Kroppsljusstakar<br>(body candlesticks)</h2>
