--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="./styles/style.css" />
   <title>Klaudia Kazmierczak Art Portfolio</title>
-  <link rel="icon" href="../Klaudia portfolio copy/favicon_io/favicon-32x32.png" />
+  <link rel="icon" href="./favicon_io/favicon-32x32.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap" rel="stylesheet" />
+
   <script src="https://kit.fontawesome.com/6e643d21a4.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Klaudia Kazmierczak is a young Swedish artist and sculptor with Polish heritage, currently studying at Gerrit Rietveld Academie in
@@ -21,6 +22,7 @@
     <nav class="navigation-bar">
       <a href="index.html"><img class="logo" src="./logo copy.png"
           alt="logo that says kk from name and surname of Klaudia Kazmierczak" /></a>
+
       <button class="hamburger" id="hamburger">
         <i class="fas fa-bars"></i>
       </button>
@@ -32,14 +34,17 @@
     </nav>
     <section class="top-section">
       <div class="top-img-container">
+
         <img src="./main pictures/face-sculpture-main.webp" alt="main picture of candle holder in a shape of human face"
           class="top-img" tabindex="0" />
       </div>
     </section>
 
     <!-- CAROUSEL SECTION -->
+    <h1 class="welcome">Hello and welcome to the colorful world of Klaudia Kazmierczak!</h1>
     <section id="carousel-section">
       <div class="carousel">
+
         <h2 class="carousel-header">FEATURED WORK</h2>
         <div class="carousel__item carousel__item--visible"><a href="sculptures.html"><img
               src="./carousel pictures/slide show pictures/slide1.jpg" alt=""></a></div>
