--- a/other.html
+++ b/other.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="./styles/style.css" />
     <title>Klaudia Kazmierczak Art Portfolio - Other Projects</title>
-    <link rel="icon" href="../Klaudia portfolio copy/favicon_io/favicon-32x32.png" />
+    <link rel="icon" href="./favicon_io/favicon-32x32.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap" rel="stylesheet" />
