--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="./styles/style.css" />
   <title>Klaudia Kazmierczak Art Portfolio - Projects</title>
-  <link rel="icon" href="../Klaudia portfolio copy/favicon_io/favicon-32x32.png" />
+  <link rel="icon" href="./favicon_io/favicon-32x32.png" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/6e643d21a4.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
