--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               src="./carousel pictures/slide show pictures/slide5.JPG" alt=""></a></div>
         <div class="carousel__actions">
           <button id="carousel__button--prev" aria-label="previous slide">
-            &lt </button> <button id="carousel__button--next" aria-label="next slide"> &gt
+            &lt; </button> <button id="carousel__button--next" aria-label="next slide"> &gt;
           </button>
         </div>
     </section>
