--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
   </header>
 
   <footer>
-    <a href="https://www.instagram.com/konstenattvarakk/" class="fab fa-instagram"></a>
+    <a href="https://www.instagram.com/konstenattvarakk/" class="fab fa-instagram" aria-label="instagram icon"></a>
     <button class="tooltip-container"><i class="fas fa-phone"></i>
-      <p class="tooltip-text">+46737193365</p>
+      <p class="tooltip-text" aria-label="phone number to Klaudia +46737193365">+46737193365</p>
     </button>
     <button class="tooltip-container"><i class="far fa-envelope"></i>
       <p class="tooltip-text">klakaz99@gmail.com</p>
