updated klaudias mail

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!-- CONTACT ME FORM -->
     <section id="contact">
       <h1>CONTACT ME</h1>
-      <form action="https://formsubmit.co/juliawos22@gmail.com" method="POST">
+      <form action="https://formsubmit.co/klakaz99@gmail.com" method="POST">
         <input type="text" name="_honey" style="display:none">
         <label for="text">Your Name:</label>
         <input type="text" name="name" required>
